# Medical-emergency-agent

./: .gitattributes  .gitignore  README.md  Stand_alone_queries.ipynb  pyproject.toml  query_with_call_transcripts_test.ipynb
experimental/: DAG_test.ipynb  kg_graph.html  kg_graph2.html  kg_graph3.html  kg_graph4_custom_prompt.html  kg_graph_test.html  kg_graph_v1_all.html  kg_graph_v2_all.html  load_docs.ipynb  test1.ipynb  test_connection.ipynb  testing_workflows.ipynb
experimental/early experiments/: basic_rag.ipynb  ems_knowledge_graph_custom_prompt.html  ems_knowledge_graph_custom_prompt_v1.html  ems_knowledge_graph_custom_prompt_v2.html  ems_knowledge_graph_custom_prompt_v3.html  extracted_triplets_cache_v1.json  extracted_triplets_cache_v2_limited.json  extracted_triplets_cache_v3.json  graph_examples.ipynb  graph_retrival_v1.ipynb  kg.html  kg_all.html  kg_all_v2.html  kg_all_v2_dynamic_extractor.html  kg_manual2.html  kg_manualv3.html  kg_test.ipynb  kg_test1.html  kg_test2+simpleparcer.html  kg_test2.html  llm-judge.ipynb  pdf2txt.ipynb  property_graph.html  rag_v02.ipynb  self-eval.ipynb  test.ipynb  testkg.ipynb
kgdata/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  19.md  20.md  21.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  40.md  41.md
kgstore/: index_store.json  kg_graph.html
kgstore_test_50/: default__vector_store.json  docstore.json  index_store.json  property_graph_store.json
src/: DAG_creator.py  PGExtractor.py  __init__.py  dynamicKG_builder.py  graphflow.py  graphflow_v2.py  helper_fn.py  medical_kg_prompt.py  model.py  parser.py  retriever.py
test data/call transcripts/: Amputated hand scenario 1 dispatcher response.txt  Amputated hand scenario 1.txt  Amputated hand.docx  Burn scenario PRKEG transcription.docx  Burn scenario dispatcher response.txt  Burn scenario.txt  Motorbike accident scenario 1 dispatcher response.txt  Motorbike accident scenario 1.txt  Motorbike accident scenario 2 dispatcher response.txt  (+3 more)
(+6 files in other folders)
